--- a/ZBot/Views/Home/Login.cshtml
+++ b/ZBot/Views/Home/Login.cshtml
@@ -7,4 +7,4 @@
 
 @*If user is logged in/authorized, login, otherwise redirect to authorization*@
 
-@Html.ActionLink("Login with Twitch", "Authorize", "Authentication", null, new { @class="btn  btn-primary" })
+@Html.ActionLink("Login with Twitch", "Authorize", "Authentication", null, new { @class="btn btn-primary btn-twitch" })
