--- a/ZBot/Views/Shared/_Layout.cshtml
+++ b/ZBot/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Dashboard</a>
+                        <a class="nav-link" href="#" >Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Commands</a>
@@ -44,7 +44,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Hi, TWITCH_USER
+                            @RenderSection("hello", false)
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Settings</a>
