--- a/ZBot/wwwroot/css/site.css
+++ b/ZBot/wwwroot/css/site.css
@@ -1,18 +1,32 @@
-﻿html{
-    position:relative;
-    min-height:100%
+﻿html {
+    position: relative;
+    min-height: 100%
 }
-body{
+
+body {
     margin: 80px 0px;
 }
 
 .footer {
     position: absolute;
     bottom: 0;
-    left:0;
+    left: 0;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
-.footer p{margin-bottom:0;}
+
+    .footer p {
+        margin-bottom: 0;
+    }
+
+.btn-twitch {
+    background-color: #6441A4;
+    border-color: #6441A4;    
+}
+
+    .btn-twitch:hover {
+        background-color: #7A55BD;
+        border-color: #7A55BD
+    }
