--- a/ZBot/Views/Dashboard/Index.cshtml
+++ b/ZBot/Views/Dashboard/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="col col-md-4">
         <iframe frameborder="1"
                 scrolling="yes"
-                id="elekbatoczki"
+                id="@Model.Username"
                 src="http://www.twitch.tv/embed/@Model.Username/chat"
                 height="750"
                 width="100%"></iframe>
